<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <EditText
        android:id="@+id/textEdit_focus"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:imeOptions="actionDone"
        android:hint = "@string/focus_mm"  />

    <EditText
        android:id="@+id/textEdit_Exposure"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:imeOptions="actionDone"
        android:hint = "@string/exposure_time"  />

    <EditText
        android:id="@+id/textEdit_ISO"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:imeOptions="actionDone"
        android:hint = "@string/iso"  />

    <ToggleButton
        android:id="@+id/toggleButton_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        />

</LinearLayout>